--- a/configuration.properties
+++ b/configuration.properties
@@ -1,1 +1,7 @@
 browser=chrome
+userUrl=https://grandbazaar.no/
+AdminUrl=https://grandbazaar-admin.vercel.app/login
+userEmail=test@test.com
+userPassword=1234*1234*
+AdminEmail=ozlem123@gmail.com
+AdminPassword=özlem12345
